--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "rebuild": "npm rebuild node-sass",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anish Bhateja",
@@ -19,10 +20,13 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "flash": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "multer": "^1.4.2",
+    "node-sass": "^4.14.1",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
 }
